# ucob-backend-rs

./: .editorconfig  .env.example  .envrc.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  compose.dev.yml  rustfmt.toml  watch.sh
.cargo/: config.toml
backend-api/: Cargo.toml
backend-api/src/: main.rs
backend-api/src/delivery/http/: mod.rs
backend-api/src/delivery/http/dto/: user.rs
backend-api/src/delivery/http/routes/: hello.rs  mod.rs  users.rs
backend-api/src/models/: user.rs
migrations/: 20260405090418_init_schema.up.sql
src/: config.rs  main.rs
src/crypto/: jwt.rs  mod.rs  password.rs
src/delivery/http/: extended.rs  mod.rs  response.rs
src/delivery/http/dto/: user.rs
src/delivery/http/middleware/: auth.rs  mod.rs
src/delivery/http/routes/: auth.rs  mod.rs  user.rs
src/error/: mod.rs
src/models/: user.rs
src/repository/: user.rs
src/services/: user.rs
