[package]
name = "ucob-backend-rs"
default-run = "ucob-backend-rs"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "seeder"
path = "src/bin/seeder.rs"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "migrate",
] }
serde = { version = "1.0", package = "serde", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
envy = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = "0.4"
axum-extra = { version = "0.12", features = ["cookie"] }
derive_builder = "0.20"
bcrypt = "0.19"
cookie = "0.18"
